--- a/k8s/demo/common/sscs/sscs-cor-frontend.yaml
+++ b/k8s/demo/common/sscs/sscs-cor-frontend.yaml
@@ -29,7 +29,7 @@ spec:
         HEARING_OUTCOME_TAB_ENABLED: "true"
         MEDIA_FILES_ALLOWED_ENABLED: "true"
         ALLOW_COOKIE_BANNER_ENABLED: "true"
-        DUMMY_PROPERTY: true
+        TEST_PROPERTY: false
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
